Fix overflow issue

--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -95,6 +95,10 @@ p {
   top: 40px;
   right: 0;
   z-index: 1;
+
+  &.aligned-left {
+    left: 0;
+  }
 }
 
 .highlighted-message {
